добавил базовые схемы и методы пользователя
